tests/baselines/reference/chainedAssignment1(strict=true).errors.txt
chainedAssignment1.ts(2,17): error TS7006: Parameter 'z' implicitly has an 'any' type.
chainedAssignment1.ts(3,5): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
chainedAssignment1.ts(7,17): error TS7006: Parameter 'z' implicitly has an 'any' type.
chainedAssignment1.ts(9,5): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
chainedAssignment1.ts(10,5): error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.
chainedAssignment1.ts(15,5): error TS2564: Property 'c' has no initializer and is not definitely assigned in the constructor.
chainedAssignment1.ts(21,1): error TS2741: Property 'a' is missing in type 'Z' but required in type 'X'.
chainedAssignment1.ts(21,6): error TS2739: Type 'Z' is missing the following properties from type 'Y': a, b
chainedAssignment1.ts(22,1): error TS2322: Type 'Z' is not assignable to type 'Y'.


==== chainedAssignment1.ts (9 errors) ====
    class X {
        constructor(public z) { }
                    ~~~~~~~~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
        a: number;
        ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
    }
    
    class Y {
        constructor(public z) {
                    ~~~~~~~~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
        }
        a: number;
        ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
        b: string;
        ~
!!! error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.
    }
    
    class Z {
        z: any;
        c: string;
        ~
!!! error TS2564: Property 'c' has no initializer and is not definitely assigned in the constructor.
    }
    
    var c1 = new X(3);
    var c2 = new Y(5);
    var c3 = new Z();
    c1 = c2 = c3; // a bug made this not report the same error as below
    ~~
!!! error TS2741: Property 'a' is missing in type 'Z' but required in type 'X'.
!!! related TS2728 chainedAssignment1.ts:3:5: 'a' is declared here.
         ~~
!!! error TS2739: Type 'Z' is missing the following properties from type 'Y': a, b
    c2 = c3; // Error TS111: Cannot convert Z to Y
    ~~
!!! error TS2322: Type 'Z' is not assignable to type 'Y'.